2014-09-03  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el (python-indent-electric-colon-1):
	New test.  (Bug#18228)

2014-08-29  Dmitry Antipov  <dmantipov@yandex.ru>

	* automated/fns-tests.el (fns-tests-sort): New test.

2014-08-28  Glenn Morris  <rgm@gnu.org>

	* automated/python-tests.el (python-shell-calculate-exec-path-2):
	Update test for today's python.el changes.

2014-08-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* automated/compile-tests.el (compile--test-error-line): Grok FILE
	being nil.  Allows for Guile tests to pass.
	(compile-tests--test-regexps-data): Add Guile tests.

2014-08-11  Glenn Morris  <rgm@gnu.org>

	* automated/data/files-bug18141.el.gz: New file.
	* automated/files.el (files-test-bug-18141-file):
	New variable and test.  (Bug#18141)

2014-08-10  Ulf Jasper  <ulf.jasper@web.de>

	Enumerate evaluated sexp diary entries (Bug#7911).
	* automated/icalendar-tests.el (icalendar--convert-anniversary-to-ical)
	(icalendar--convert-cyclic-to-ical, icalendar--convert-block-to-ical)
	(icalendar--convert-yearly-to-ical, icalendar--convert-weekly-to-ical)
	(icalendar--convert-ordinary-to-ical): Returns cons cell now.
	(icalendar--convert-to-ical, icalendar--convert-sexp-to-ical):
	New tests.

2014-08-07  Glenn Morris  <rgm@gnu.org>

	* automated/Makefile.in (check-tar): Remove, hydra recipe does it now.

2014-08-06  Ulf Jasper  <ulf.jasper@web.de>

	* automated/icalendar-tests.el (icalendar--convert-ordinary-to-ical)
	(icalendar--diarytime-to-isotime): More testcases (Bug#13750).

2014-08-03  Glenn Morris  <rgm@gnu.org>

	* automated/Makefile.in (check-tar): New rule.

2014-08-02  Glenn Morris  <rgm@gnu.org>

	* automated/fns-tests.el (fns-tests-compare-strings):
	Update test.  (Bug#17903)

	* automated/icalendar-tests.el (icalendar--decode-isodatetime):
	Use more precise TZ specification, as per 2013-08-04.

2014-07-30  Ulf Jasper  <ulf.jasper@web.de>

	* automated/icalendar-tests.el (icalendar--decode-isodatetime):